# mypy-example

./: .gitignore  1_bad_way.py  2_ok_way.py  3_ok_way_correction.py  4_best_way.py  4_ok_way_strict.py  5_best_way.py  README.md  data.json  pyproject.toml
data/: correct_data.json  data.json
debug/: dataset.json  script.py
